--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.brianstempin</groupId>
+    <groupId>com.hydr93</groupId>
     <artifactId>vindiniumclient</artifactId>
     <version>1.1.0-SNAPSHOT</version>
 
@@ -63,7 +63,7 @@
                             <transformers>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.brianstempin.vindiniumclient.Main</mainClass>
+                                    <mainClass>com.hydr93.vindiniumclient.Main</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
